--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -1,50 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Python Flask Bucket List App</title>
- 
-    
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/signup.css" rel="stylesheet">
-    
+<html>
+	<head>
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+		<link href="../static/signup.css" rel="stylesheet" />
+		<title>Document</title>
   </head>
- 
-  <body>
- 
-    <div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/">Home</a></li>
-            <li role="presentation"><a href="#">Sign In</a></li>
-            <li role="presentation" class="active"><a href="#">Sign Up</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Python Flask App</h3>
-      </div>
- 
-      <div class="jumbotron">
-        <h1>Bucket List App</h1>
-        <form class="form-signin">
-        <label for="inputName" class="sr-only">Name</label>
-        <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-         
-        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
-      </form>
-      </div>
- 
-       
- 
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
- 
-    </div>
+  
+	<body>
+		<div class="v13_4">
+			<div class="v13_5">
+				<div class="v13_6"></div>
+				<span class="v13_7">
+                    <a href="/">Back</a>
+                </span>
+            </div>
+            
+            <span class="v13_8">Book Your Book</span>
+            
+			<div class="v14_0">
+				<div class="v13_10">
+                    <span class="v13_11">Username:</span>
+                    <input type="username" name="inputUserame" id="inputUserame" class="form-signin" placeholder="Name" required autofocus>
+				</div>
+				<div class="v14_4">
+					<span class="v14_5">Password:</span>
+                    <input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
+                </div>
+				<div class="v14_12">
+					<span class="v14_13">Email:</span>
+                    <input type="email" name="inputEmail" id="inputEmail" class="form-signin" placeholder="Email" required>
+				</div>
+				
+            </div>
+			<button id="btnSignUp" class="button-signup" type="button">
+				<span class="button-signup-text">
+					<a href="/showHomepageSignedIn">Sign up</a>
+				</span>
+			</button>
+            
+		</div>
   </body>
+  
 </html>
