Cloud proxy file and back button changes

--- a/FlaskApp/templates/bookList.html
+++ b/FlaskApp/templates/bookList.html
@@ -10,7 +10,9 @@
 
 			<div class="v8_0">
 				<div class="v6_4"></div>
-				<span class="v6_6">Back</span>
+				<span class="v6_6">
+					<a href="/showHomepageSignedIn">Back</a>
+				</span>
             </div>
             
             <span class="v6_7">Book Your Book</span>
