--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -18,18 +18,19 @@
             <span class="v13_8">Book Your Book</span>
             
 			<div class="v14_0">
-				<div class="v13_10">
-                    <span class="v13_11">Username:</span>
-                    <input type="username" name="inputUserame" id="inputUserame" class="form-signin" placeholder="Name" required autofocus>
-				</div>
-				<div class="v14_4">
-					<span class="v14_5">Password:</span>
-                    <input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
+                
+                <div class="v13_10">
+                    <span class="v13_11">Name:</span>
+                    <input type="name" name="inputUserame" id="inputName" class="form-signin" placeholder="Name" required autofocus>
                 </div>
-				<div class="v14_12">
+                <div class="v14_4">
 					<span class="v14_13">Email:</span>
                     <input type="email" name="inputEmail" id="inputEmail" class="form-signin" placeholder="Email" required>
 				</div>
+				<div class="v14_12">
+					<span class="v14_5">Password:</span>
+                    <input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
+                </div>
 				
             </div>
 			<button id="btnSignUp" class="button-signup" type="button">
