Add user to database(SignUp)

--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -35,7 +35,7 @@
             </div>
 			<button id="btnSignUp" class="button-signup" type="button">
 				<span class="button-signup-text">
-					<a href="/showHomepageSignedIn">Sign up</a>
+					<a href="/signUp">Sign up</a>
 				</span>
 			</button>
             
