Corrected SQL syntax;

--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -21,7 +21,7 @@
                 
                 <div class="v13_10">
                     <span class="v13_11">Name:</span>
-                    <input type="name" name="inputUserame" id="inputName" class="form-signin" placeholder="Name" required autofocus>
+                    <input type="name" name="inputName" id="inputName" class="form-signin" placeholder="Name" required autofocus>
                 </div>
                 <div class="v14_4">
 					<span class="v14_13">Email:</span>
