--- a/FlaskApp/templates/homepage.html
+++ b/FlaskApp/templates/homepage.html
@@ -20,7 +20,7 @@
                 <a href="/showSignIn">Sign In</a>
             </span>
             <span class="v4_1">
-                <a href="/showSignUp">Sign Up</a>
+                <a href="/signUp">Sign Up</a>
             </span>
             <span class="v4_4">
                 Book Your Book
