Added form for signup

--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -18,19 +18,20 @@
             <span class="v13_8">Book Your Book</span>
             
 			<div class="v14_0">
-                
-                <div class="v13_10">
-                    <span class="v13_11">Name:</span>
-                    <input type="name" name="inputName" id="inputName" class="form-signin" placeholder="Name" required autofocus>
-                </div>
-                <div class="v14_4">
-					<span class="v14_13">Email:</span>
-                    <input type="email" name="inputEmail" id="inputEmail" class="form-signin" placeholder="Email" required>
-				</div>
-				<div class="v14_12">
-					<span class="v14_5">Password:</span>
-                    <input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
-                </div>
+                <form action="/signUp" method="POST"></form>
+					<div class="v13_10">
+						<span class="v13_11">Name:</span>
+						<input type="name" name="inputName" id="inputName" class="form-signin" placeholder="Name" required autofocus>
+					</div>
+					<div class="v14_4">
+						<span class="v14_13">Email:</span>
+						<input type="email" name="inputEmail" id="inputEmail" class="form-signin" placeholder="Email" required>
+					</div>
+					<div class="v14_12">
+						<span class="v14_5">Password:</span>
+						<input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
+					</div>
+				</form>
 				
             </div>
 			<button id="btnSignUp" class="button-signup" type="button">
