Small fix for form

--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -18,7 +18,7 @@
             <span class="v13_8">Book Your Book</span>
             
 			<div class="v14_0">
-                <form action="/signUp" method="POST"></form>
+                <form action="/signUp" method="POST">
 					<div class="v13_10">
 						<span class="v13_11">Name:</span>
 						<input type="name" name="inputName" id="inputName" class="form-signin" placeholder="Name" required autofocus>
