--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -15,10 +15,10 @@
                 </span>
             </div>
             
-            <span class="v13_8">Book Your Book</span>
-            
-			<div class="v14_0">
-                <form action="/signUp" method="POST">
+			<span class="v13_8">Book Your Book</span>
+			
+            <form action="/signUp" method="POST">
+				<div class="v14_0">
 					<div class="v13_10">
 						<span class="v13_11">Name:</span>
 						<input type="name" name="inputName" id="inputName" class="form-signin" placeholder="Name" required autofocus>
@@ -31,15 +31,12 @@
 						<span class="v14_5">Password:</span>
 						<input type="password" name="inputPassword" id="inputPassword" class="form-signin" placeholder="Password" required>
 					</div>
-				</form>
-				
-            </div>
-			<button id="btnSignUp" class="button-signup" type="button">
-				<span class="button-signup-text">
-					<a href="/signUp">Sign up</a>
-				</span>
-			</button>
-            
+				</div>
+				<button type="submit" id="btnSignUp" class="button-signup">
+					<span class="button-signup-text">Sign up</span>
+				</button>
+			</form>	
+			
 		</div>
   </body>
   
