Last fixed Deploy

--- a/FlaskApp/templates/homepage.html
+++ b/FlaskApp/templates/homepage.html
@@ -17,7 +17,7 @@
             </div>
 
             <span class="v4_0">
-                <a href="/showSignIn">Sign In</a>
+                <a href="/signIn">Sign In</a>
             </span>
             <span class="v4_1">
                 <a href="/signUp">Sign Up</a>
