Sign In functionality implemented

--- a/FlaskApp/templates/signin.html
+++ b/FlaskApp/templates/signin.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-		<link href="../static/signup.css" rel="stylesheet" />
+		<link href="../static/signin.css" rel="stylesheet" />
 		<title>Document</title>
   </head>
   
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 				<button type="submit" id="btnSignIn" class="button-signin">
-					<span class="button-signin-text">Sign up</span>
+					<span class="button-signin-text">Sign in</span>
 				</button>
 			</form>	
 			
