--- a/FlaskApp/static/bookList.css
+++ b/FlaskApp/static/bookList.css
@@ -66,8 +66,8 @@
     height: 72px;
     background: rgba(255,255,255,1);
     opacity: 1;
-    position: absolute;
-    top: 358px;
+    position: relative;
+    top: 0px;
     left: 204px;
     overflow: hidden;
   }
@@ -195,16 +195,6 @@
     font-size: 20px;
     opacity: 1;
     text-align: left;
-  }
-  .v11_10 {
-    width: 100%;
-    height: 72px;
-    background: rgba(228,228,228,1);
-    opacity: 1;
-    position: absolute;
-    top: 430px;
-    left: 204px;
-    overflow: hidden;
   }
   .v11_11 {
     width: 238px;
@@ -361,13 +351,12 @@
     opacity: 1;
     text-align: left;
   }
-  .v11_21 {
+  .book_row {
     width: 100%;
     height: 72px;
     background: rgba(228,228,228,1);
     opacity: 1;
-    position: absolute;
-    top: 502px;
+    position: relative;
     left: 204px;
     overflow: hidden;
   }
@@ -525,5 +514,11 @@
     font-size: 24px;
     opacity: 1;
     text-align: left;
+  }
+
+  .book_table {
+    position: absolute;
+    top: 300px;
+    width: 100%;
   }
   
