--- a/FlaskApp/templates/bookList.html
+++ b/FlaskApp/templates/bookList.html
@@ -16,64 +16,54 @@
             </div>
             
             <span class="v6_7">Book Your Book</span>
-            
-			<div class="v10_1">
-				<div class="v11_0">
-					<span class="v11_1">Title</span>
+			
+			<div class="book_table">
+				<div class="v10_1">
+					<div class="v11_0">
+						<span class="v11_1">Title</span>
+					</div>
+					<div class="v11_2">
+						<span class="v11_3">Course</span>
+					</div>
+					<div class="v11_8">
+						<span class="v11_9">Seller</span>
+					</div>
+					<div class="v11_4">
+						<span class="v11_5">Rent</span>
+					</div>
+					<div class="v11_6">
+						<span class="v11_7">Purchase</span>
+					</div>
 				</div>
-				<div class="v11_2">
-					<span class="v11_3">Course</span>
-				</div>
-				<div class="v11_8">
-					<span class="v11_9">Seller</span>
-				</div>
-				<div class="v11_4">
-					<span class="v11_5">Rent</span>
-				</div>
-				<div class="v11_6">
-					<span class="v11_7">Purchase</span>
-				</div>
-            </div>
-            
-			<div class="v11_10">
-				<div class="v11_11">
-					<span class="v11_12">Modern Physics</span>
-				</div>
-				<div class="v11_13">
-					<span class="v11_14">Physics</span>
-				</div>
-				<div class="v11_19">
-					<span class="v11_20">Dhruv</span>
-                </div>
-                <div class="v11_15">
-                    <div class="v12_4"></div>
-                    <span class="v11_16">$50</span>
-                </div>
-				<div class="v11_17">
-					<div class="v12_5"></div>
-					<span class="v11_18">$150</span>
-				</div>
-            </div>
-            
-			<div class="v11_21">
-				<div class="v11_22">
-					<span class="v11_23">C Programming</span>
-				</div>
-				<div class="v11_24">
-					<span class="v11_25">CS 240</span>
-				</div>
-				<div class="v11_30">
-					<span class="v11_31">Dennis Ritchie</span>
-				</div>
-				<div class="v11_26">
-					<div class="v12_2"></div>
-					<span class="v11_27">$50</span>
-				</div>
-				<div class="v11_28">
-					<div class="v12_3"></div>
-					<span class="v11_29">$150</span>
-				</div>
-            </div>
+
+				<ol> 
+					{%for i in range(0, lenBooks)%}
+						<li>
+							<div class="book_row">
+								<div class="v11_11">
+									<span class="v11_12">{{book_names[i]}}</span>
+								</div>
+								<div class="v11_13">
+									<span class="v11_14">{{course_ids[i]}}</span>
+								</div>
+								<div class="v11_19">
+									<span class="v11_20">{{seller_ids[i]}}</span>
+								</div>
+								<div class="v11_15">
+									<div class="v12_4"></div>
+									<span class="v11_16">{{purchase_prices[i]}}</span>
+								</div>
+								<div class="v11_17">
+									<div class="v12_5"></div>
+									<span class="v11_18">{{rental_prices[i]}}</span>
+								</div>
+							</div>
+						</li> 
+					{%endfor%}
+					  
+				</ol> 
+			
+			</div>
             
 		</div>
 	</body>
