--- a/FlaskApp/templates/homepageSignedIn.html
+++ b/FlaskApp/templates/homepageSignedIn.html
@@ -6,21 +6,18 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="v5_5">
-			<div class="v5_6"></div>
-			<div class="v5_7"></div>
-            <div class="v5_12"></div>
-            
-			<span class="v5_9">
-                <a href = "/showBookList">Buy</a>
-            </span>
-            <span class="v5_13">
-                <a href = "/showBookList">Rent</a>
-            </span>
-			<span class="v5_8">Sell</span>
-            
-			<span class="v5_10">Book Your Book</span>
-			<div class="v5_11"></div>
+		<div>
+			<span class="homepage_signed_in_title">Book Your Book</span>
+			<div class="homepage_buy_bubble">
+				<span class="homepage_bubble_text">
+					<a href = "/showBookList">Buy/Rent</a>
+				</span>
+			</div>
+			<div class="homepage_sell_bubble">
+				<span class="homepage_bubble_text">
+					<a href = "/showSell">Sell</a>
+				</span>
+			</div>
 		</div>
 	</body>
 </html>
