--- a/FlaskApp/static/homepageSignedIn.css
+++ b/FlaskApp/static/homepageSignedIn.css
@@ -3,37 +3,14 @@
   padding: 0px !important;
   margin: 0px !important;
 }
-.v5_5 {
-  width: 100%;
-  height: 1024px;
-  background: rgba(255,255,255,1);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
-}
-.v5_6 {
+.homepage_buy_bubble {
   width: 219px;
   height: 76px;
+  text-align:center;
   background: rgba(64,154,116,1);
   opacity: 1;
   position: absolute;
-  top: 837px;
-  left: 1127px;
-  border-top-left-radius: 59px;
-  border-top-right-radius: 59px;
-  border-bottom-left-radius: 59px;
-  border-bottom-right-radius: 59px;
-  overflow: hidden;
-}
-.v5_7 {
-  width: 219px;
-  height: 76px;
-  background: rgba(64,154,116,1);
-  opacity: 1;
-  position: absolute;
-  top: 837px;
+  top: 500px;
   left: 70px;
   border-top-left-radius: 59px;
   border-top-right-radius: 59px;
@@ -41,57 +18,35 @@
   border-bottom-right-radius: 59px;
   overflow: hidden;
 }
-.v5_12 {
+.homepage_sell_bubble {
   width: 219px;
   height: 76px;
+  text-align:center;
   background: rgba(64,154,116,1);
   opacity: 1;
   position: absolute;
-  top: 837px;
-  left: 609px;
+  top: 500px;
+  left: 1127px;
   border-top-left-radius: 59px;
   border-top-right-radius: 59px;
   border-bottom-left-radius: 59px;
   border-bottom-right-radius: 59px;
   overflow: hidden;
 }
-.v5_8 {
-  width: 58px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 854px;
-  left: 1208px;
-  font-family: Roboto;
-  font-weight: Regular;
-  font-size: 36px;
-  opacity: 1;
-  text-align: left;
-}
-.v5_9 {
+.homepage_bubble_text {
   width: 60px;
+  top: 13px;
+  margin: 0 auto;
   color: rgba(255,255,255,1);
-  position: absolute;
-  top: 854px;
-  left: 150px;
+  position: relative;
   font-family: Roboto;
   font-weight: Regular;
   font-size: 36px;
   opacity: 1;
-  text-align: left;
+  text-align: center;
+  margin: auto;
 }
-.v5_13 {
-  width: 73px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 854px;
-  left: 683px;
-  font-family: Roboto;
-  font-weight: Regular;
-  font-size: 36px;
-  opacity: 1;
-  text-align: left;
-}
-.v5_10 {
+.homepage_signed_in_title {
   width: 100%;
   color: rgba(101,188,151,1);
   position: absolute;
@@ -103,16 +58,4 @@
   opacity: 1;
   text-align: left;
 }
-.v5_11 {
-  width: 625px;
-  height: 447px;
-  background: url("../images/v5_11.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 273px;
-  left: 407px;
-  overflow: hidden;
-}
+
