Implement the sell book page

--- a/FlaskApp/templates/bookList.html
+++ b/FlaskApp/templates/bookList.html
@@ -75,7 +75,7 @@
 				<div class="book_list_buy_input_box">
 					<div class="book_list_input_row">
 						<span class="book_list_input_text">ISBN:</span>
-						<input type="isbn" name="inputIsbn" id="inputIsbn" class="form-buy" placeholder="ISBN" required autofocus>
+						<input type="number" name="inputIsbn" id="inputIsbn" class="form-buy" placeholder="ISBN" required autofocus>
 					</div>
 				</div>
 				<button type="submit" id="btnBuy" class="book_list_buy_bubble">
@@ -87,11 +87,11 @@
 				<div class="book_list_rent_input_box">
 					<div class="book_list_input_row">
 						<span class="book_list_input_text">ISBN:</span>
-						<input type="isbn" name="inputIsbn" id="inputIsbn" class="form-rent" placeholder="ISBN" required autofocus>
+						<input type="number" name="inputIsbn" id="inputIsbn" class="form-rent" placeholder="ISBN" required autofocus>
 					</div>
 					<div class="book_list_input_row">
 						<span class="book_list_input_text">Rental end date:</span>
-						<input type="endDate" name="inputEndDate" id="inputEndDate" class="form-rent" placeholder="Date" required autofocus>
+						<input type="date" name="inputEndDate" id="inputEndDate" class="form-rent" placeholder="Date" required autofocus>
 					</div>
 				</div>
 				<button type="submit" id="btnRent" class="book_list_rent_bubble">
