--- a/FlaskApp/templates/homepageSignedIn.html
+++ b/FlaskApp/templates/homepageSignedIn.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="homepage_sell_bubble">
 				<span class="homepage_bubble_text">
-					<a href = "/showSell">Sell</a>
+					<a href = "/sell">Sell</a>
 				</span>
 			</div>
 		</div>
