Quick fix and add course name field

--- a/FlaskApp/templates/sell.html
+++ b/FlaskApp/templates/sell.html
@@ -28,8 +28,12 @@
 						<input type="text" name="inputBookName" id="inputBookName" class="form-sell" placeholder="Book Name" required autofocus>
 					</div>
 					<div class="sell_input_row">
-						<span class="sell_input_text">Course:</span>
-						<input type="text" name="inputCourse" id="inputCourse" class="form-sell" placeholder="Course" required autofocus>
+						<span class="sell_input_text">Course ID:</span>
+						<input type="text" name="inputCourse" id="inputCourse" class="form-sell" placeholder="Course ID" required autofocus>
+					</div>
+					<div class="sell_input_row">
+						<span class="sell_input_text">Course Name:</span>
+						<input type="text" name="inputCourseName" id="inputCourseName" class="form-sell" placeholder="Course Name" required autofocus>
 					</div>
 					<div class="sell_input_row">
 						<span class="sell_input_text">Price:</span>
