--- a/FlaskApp/templates/sell.html
+++ b/FlaskApp/templates/sell.html
@@ -36,8 +36,12 @@
 						<input type="text" name="inputCourseName" id="inputCourseName" class="form-sell" placeholder="Course Name" required autofocus>
 					</div>
 					<div class="sell_input_row">
-						<span class="sell_input_text">Price:</span>
-						<input type="number" name="inputPrice" id="inputPrice" class="form-sell" placeholder="Price" required autofocus>
+						<span class="sell_input_text">Purchase Price:</span>
+						<input type="number" name="inputPurchasePrice" id="inputPurchasePrice" class="form-sell" placeholder="Purschase Price" required autofocus>
+					</div>
+					<div class="sell_input_row">
+						<span class="sell_input_text">Rental Price:</span>
+						<input type="number" name="inputRentalPrice" id="inputRentalPrice" class="form-sell" placeholder="Rental Price" required autofocus>
 					</div>
 				</div>
 				<button type="submit" id="btnSell" class="sell_bubble">
