Send quantities to frontend

--- a/FlaskApp/templates/bookList.html
+++ b/FlaskApp/templates/bookList.html
@@ -34,6 +34,9 @@
 					<div class="v11_6">
 						<span class="v11_7">Rent</span>
 					</div>
+					<!-- <div class="v11_55">
+						<span class="v11_7">Quantity</span>
+					</div> -->
 					<div class="book_list_isbn_header">
 						<span class="v11_7">ISBN</span>
 					</div>
@@ -60,6 +63,9 @@
 									<!-- <div class="v12_5"></div> -->
 									<span class="v11_18">${{rental_prices[i]}}</span>
 								</div>
+								<!-- <div class="v11_77">
+									<span class="v11_18">{{quantities[i]}}</span>
+								</div> -->
 								<div class="book_list_isbn_box">
 									<span class="book_list_isbn">{{isbns[i]}}</span>
 								</div>
