--- a/FlaskApp/templates/sell.html
+++ b/FlaskApp/templates/sell.html
@@ -43,6 +43,10 @@
 						<span class="sell_input_text">Rental Price:</span>
 						<input type="number" name="inputRentalPrice" id="inputRentalPrice" class="form-sell" placeholder="Rental Price" required autofocus>
 					</div>
+					<!-- <div class="sell_input_row">
+						<span class="sell_input_text">Quantity:</span>
+						<input type="number" name="inputQuantity" id="inputQuantity" class="form-sell" placeholder="Quantity" required autofocus>
+					</div> -->
 				</div>
 				<button type="submit" id="btnSell" class="sell_bubble">
 					<span class="sell_text">Sell</span>
